# NEAT_cpp_

./: Board.h  CMakeLists.txt  Cross_over.h  Distance.h  Gene.h  Genome.h  Neat.h  README.md  Species.h  Specization.h  System.h  XOR.txt  calculator.h  main.cpp  mutate.h  objects.h  old inputs.txt  random.h  snake.h  test.cpp  test.h  todo.txt  types.h
